# multiscale_physics_sandbox

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  desktop.ini  imgui.ini  vcpkg.json
assets/local/: english.json
assets/shaders/: border.fs  boxvertexshader.vs  lightvertshader.vs  modelshader.fs  modelshader.vs
cmake/: CPM.cmake  glad_generate.cmake  imgui.cmake
extern_deps/glad/: glad.h
include/: glad.c  image_implementation.cpp
include/gtk/: gtkconfig.h  gtktypebuiltins.h  gtkversion.h
local/: srpski.json
projects/: oateee.txt
src/: CMakeLists.txt  create_project.cpp  create_project.h  game_engine.cpp  game_engine.h  main.cpp  main_menu.cpp  open_project.cpp  open_project.h  settings.cpp  zip_utils.cpp
src/includes/: appstate.h  camera.h  main.h  main_menu.h  mesh.h  model.h  primitives.h  save_project.h  settings.h  shader_s.h  zip_utils.h
src/local/: en.json  english.json  serbian.json
src/main_menu/: CMakeLists.txt  create_project.cpp  main_menu.cpp  open_project.cpp  settings.cpp
src/shaders/: border.fs  fragmentshad.fs  screenfragmentshad.fs  vertexshad.vs
src/utils/: CMakeLists.txt  zip_utils.cpp
src/workspace/: CMakeLists.txt  game_engine.cpp  primitives.cpp  save_project.cpp
user_data/projects/: cdknvdk.msps  teoff.msps  test1111.msps  test_proj.msps
user_data/user_settings/: settings.json
vendored_extern_deps/glad/: glad.c
